--- a/view/partials/head.html
+++ b/view/partials/head.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="../style/form.css">
     <link rel="stylesheet" href="../style/style.css">
     <script src="https://kit.fontawesome.com/ae8e09c608.js" crossorigin="anonymous"></script>
-    <link rel="shortcut icon" href="images/iconTask.icon"/>
-    <script defer type="text/javascript" src="./funciones.js"></script>
+    <link rel="shortcut icon" href="../images/iconTask.icon"/>
+    <script defer type="text/javascript" src="../funciones.js"></script>
     <title>Task list</title>
 </head>
