--- a/style/style.css
+++ b/style/style.css
@@ -320,7 +320,10 @@ footer{
     display: flex;
     justify-content: center;
 }
-.headerProfile{
+#mainProfile{
+height: 80%;
+}
+#headerProfile{
     position: fixed;
     height: 20%;
     top: 80%;
@@ -353,10 +356,16 @@ footer{
     color: white;
 }
 .btn-add-task-form{
-    position: fixed;
-    top:2%;
-    left: 5%;
+    position: relative;
+    display: block;
+    top:3%;
+    line-height: 1;
+    padding: 2vh .75rem;
+    margin: 0 auto;
     z-index: 40;
+    background-color: rgb(18, 109, 245);
+    font-weight: 700;
+    color: white;
 }
 main .btn-add-task-form:focus ~ .formBoxTask{
     left: 10%;
@@ -367,48 +376,50 @@ main .btn-add-task-form:focus{
 .tasksBox{
     position: relative;
     margin: 0 auto;
-    top:12vh;
+    top:5%;
     width: 90%;
-    height: 68vh;
+    height: 80%;
     z-index: 21;
-    overflow:hidden;
+}
+.tasksBox h2{
+    height: 10%;
 }
 .tasksBox .tableBox{
-    background-color: brown;
     overflow: auto;
-    height: 62vh;
+    height: 90%;
 }
 .tasksBox h2{
     font-size: 4vh;
     text-align: center;
 }
 #tableTask{
+    width: 100%;
     overflow:auto;
     table-layout: fixed;
-    width: 100%;
+    border-collapse: collapse;
 }
 #tableTask tr .taskTable{
     overflow: auto;
-}
-#tableTask,
-#tableTask td,
-#tableTask th{
-    border: 1px solid cornflowerblue;
-    height: 50px;
 }
 #tableTask th {
     text-align: center;
     background-color: rgb(18, 109, 245);
     color: white;
     padding: 5px;
+    border: 1px solid rgb(18, 109, 245);
+
 }
 #tableTask td {
     padding: 5px 10px;
     text-align: left;
+    border: 1px solid rgb(18, 109, 245);
+
 }
 #tableTask tr{
     position: relative;
     background-color: skyblue;
+    height: 45px;
+
 }
 #tableTask thead .theadSmall th{
     width: 60%;
@@ -566,7 +577,7 @@ main .btn-add-task-form:focus{
         font-size: 2vw;
     }
     main .btn-add-task-form:focus ~ .formBoxTask{
-        left: 15%;
+        left: 10%;
     }
 }
 @media only screen and (min-width: 480px){
@@ -759,9 +770,12 @@ main .btn-add-task-form:focus{
     #contactPage section p{
         font-size: 1rem;
     }
-    .headerProfile{
-        height: 10vh;
-        top: 90vh;
+    /* #mainProfile{
+
+    } */
+    #headerProfile{
+        height: 10%;
+        top: 90%;
     }
     .nav-profile div a,
     .nav-profile div h2{
