--- a/style/form.css
+++ b/style/form.css
@@ -11,13 +11,13 @@
     background-color: rgba(0, 0, 0, 0.89);
     padding:5vh 6vw;
     width: 75%;
-    max-width: 350px;
+    max-width: 370px;
     height: 70%;
 }
 .formBoxRegister{
     padding: 20px 25px 30px 30px;
     width: 85%;
-    max-width: 340px;
+    max-width: 360px;
     height: 80%;
     max-height: 500px;
     background-color: rgba(0, 0, 0, 0.89);
@@ -48,6 +48,9 @@
 .formBoxLogin .form-container-login div{
 	position:relative;
     width: 100%;
+}
+.input-container {
+    top: 15px;
 }
 .input-container label{
     position:absolute;
@@ -147,7 +150,7 @@ width: 100%;
 }
 .input-container-register input:focus ~ label,
 .input-container-register input:valid ~ label{
-	top:-2vh;
+	top:-1vh;
 	font-size:2vh;
 }
 .link-login-register{
@@ -157,6 +160,7 @@ width: 100%;
 .link-login-register a{
     position: absolute;
     right: 0;
+    top: 30%;
     font-size: 12px;
     color: rgb(18, 109, 245);
 }
