--- a/style/style.css
+++ b/style/style.css
@@ -171,7 +171,7 @@ header div .btn-menu:focus ~ .other-submenu{
     z-index:inherit;
     height: 33.33%;
 }
-.navegbar li button{
+.navegbar li a{
     position: relative;
     list-style: none;
     outline: none;
