--- a/style/form.css
+++ b/style/form.css
@@ -149,7 +149,7 @@ width: 100%;
 	font-size:2vh;
 }
 .input-container-register input:focus ~ label,
-.input-container-register input:-webkit-autofill ~ label{
+.input-container-register input:-webkit-autofill     ~ label{
 	top:-1vh;
 	font-size:2vh;
 }
@@ -186,6 +186,8 @@ outline-color: transparent;
     border: 0;
     color: #fff;
 	padding:.5rem 1.5rem;
+    font-size: 3vh;
+    font-weight: 700;
     text-transform:uppercase;
     border-radius:2px;
     cursor:pointer;
@@ -222,9 +224,9 @@ outline-color: transparent;
 .formBoxTask{
     position: fixed;
     left: -100%;
-    top: 5%;
+    top: 13%;
     width:80%;
-    height: 64%;
+    height: 72%;
     color: white;
     background-color: rgb(18, 109, 245);
     border: 2px solid #011BEB;
@@ -232,35 +234,50 @@ outline-color: transparent;
     transition: left 1s;
     z-index: 50;
 }
+.formBoxEditTask{
+    top: 50%;
+    height: 72%;
+    width: 70%;
+    color: white;
+    background-color: rgb(18, 109, 245);
+    padding: 2vh 2vw;
+}
 .formBoxTask .btn-submit button{
     padding: 1vh 3vw;
 }
-.formBoxTask form:first-child{
+.formBoxTask form,
+.formBoxEditTask form{
     height: 100%;
+}
+.formBoxTask form > div,
+.formBoxEditTask form > div{
+    height: 100%;
+    border: 5px solid crimson;
 }
 main .formBoxTask:focus-within{
     left: 10%;
 }
 .input-container-addTask{
     width: 100%;
-    height: 20%;
-    padding: 1vh 10vw;
+    height: 22.5%;
+    padding: 1vh 10%;
+}
+.input-container-addTask:nth-child(5){
+    height: 10%;
 }
 .input-container-addTask label{
 font-size: 3vh;
 font-weight: 500;
 }
-.input-container-addTask textarea,
 .input-container-addTask select,
-.input-container-addTask input{
+.input-container-addTask input,
+.input-container-addTask textarea{
     width: 100%;
-    height: 6vh;
+    height: 35%;
+    font-size: 2vh;
 }
-.formBoxEditTask{
-    width: 80%;
-    color: white;
-    background-color: rgb(18, 109, 245);
-    padding: 2vh 2vw;
+.input-container-addTask textarea{
+    height: 60%;
 }
 @media only screen and (orientation: landscape) and (max-width: 768px) {
     #contactPage .btn-submit button{
@@ -271,17 +288,20 @@ font-weight: 500;
         width: 50%;
     }
     .formBoxTask{
-        top: 10%;
-        height: 59%;
-        padding: 4vh 0;
+        /* top: 10%; */
     }
     main .formBoxTask:focus-within{
         left: 10%;
     }
-    .formBoxTask div{
+    .input-container-addTask label{
+        font-size: 3vh;
+        font-weight: 700;
+    }
+    /* .formBoxTask div{
         display: grid;
         grid-template-columns: 46% 46%;
         grid-template-rows: repeat(2,40%) 20%;
+        border: 2px solid red;
         column-gap: 8%;
         height: 100%;
     }
@@ -289,7 +309,6 @@ font-weight: 500;
         height: 100%;
         display: flex;
         flex-direction: column;
-        justify-content: center;
         padding: 2vh 3vw;
     }
     .formBoxTask .input-container-addTask label,
@@ -299,12 +318,12 @@ font-weight: 500;
     .formBoxTask .input-container-addTask textarea,
     .formBoxTask .input-container-addTask select,
     .formBoxTask .input-container-addTask input{
-        height: 30%;
+        height: 40%;
     }
     .formBoxTask div:nth-child(5){
         grid-column-start: 1;
         grid-column-end: 3;
-    }
+    } */
     .formBoxEditTask{
         width: 60%;
         top: 50%;
